实验十一完成

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
 	<a href="project8/index.html">实验八</a>
+	UIView *view = [[UIView alloc] init];
+view.frame = CGRectMake(144,720,522,79);
+
+view.layer.backgroundColor = [UIColor colorWithRed:255/255.0 green:42585/255.0 blue:65025/255.0 alpha:1.0].CGColor;
+view.layer.cornerRadius = 10;
 </body>
 </html>
