--- a/project11/index.html
+++ b/project11/index.html
@@ -14,7 +14,9 @@
 	<div class="g-index">
 		<div class="g-hd">
 			<div class="m-trg">
+				<div>
 				<span></span><span></span><span></span>
+				</div>
 			</div>
 			<div class="m-logo">
 				<span>
@@ -148,84 +150,109 @@
 						<div>
 							<span>立即购买</span>
 						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="g-ft">
-			<div class="txt">
-				
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span class="b">xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span class="b">xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-            </div>
-			<div class="txt">
-				<p>For business</p>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<p>For business</p>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<p>For business</p>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-			</div>
-			<div class="txt">
-				<p>Shop for</p>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-			</div>
-			<div class="txt">
-				<p>For business</p>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<p>For business</p>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<p>For business</p>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-			</div>
-			<div class="txt">
-				<p>Shop for</p>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-				<span>xxxxxxx</span>
-			</div>
-		</div>
-		<div class="g-i">
-			<span style="font-weight: bold;">xxxxxx</span><span>xxxxx</span><span>xxxxx</span><span>xxxxx</span>
-		</div>
-		<div style="height: 100px;"></div>
+			<div class="g-ft">
+				<div class="txt">
+					<p class="mm">xxx</p>
+					<div class="mob">
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span class="b">xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span class="b">xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+					</div>
+				</div>
+				<div class="txt">
+					<p class="mm">For business</p>
+					<div class="mob">
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
 
-	</div>
-	<script src="https://cdn.jsdelivr.net/npm/less@4"></script>
-	<script src="js/main.js"></script>
+					</div>
+					<p class="mm">For business</p>
+					<div class="mob">
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+					</div>
+					<p class="mm">For business</p>
+					<div class="mob">
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+					</div>
+				</div>
+				<div class="txt">
+					<p class="mm">Shop for</p>
+					<div class="mob">
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+					</div>
+				</div>
+				<div class="txt">
+					<p class="mm">For business</p>
+					<div class="mob">
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+					</div>
+					<p class="mm">For business</p>
+					<div class="mob">
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+					</div>
+					<p class="mm">For business</p>
+					<div class="mob">
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+					</div>
+				</div>
+				<div class="txt">
+					<p class="mm">Shopdddd</p>
+					<div class="mob">
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+						<span>xxxxxxx</span>
+					</div>
+				</div>
+			</div>
+			<div class="g-i">
+				<span style="font-weight: bold;">xxxxxx</span><span>xxxxx</span><span>xxxxx</span><span>xxxxx</span>
+			</div>
+			<div class="g-foot">
+				<span>Copyright © 2022 Adobe. All rights reserved./</span>
+				<span>xxxxxx/</span>
+				<span>xxxxxxxx/</span>
+				<span>xxxxx/</span>
+				<span>xxxxx/</span>
+				<span>xxxx/</span>
+			</div>
+		</div>
+		<script src="https://cdn.jsdelivr.net/npm/less@4"></script>
+		<script src="js/main.js"></script>
 </body>
 
 </html>
